[gd_scene load_steps=5 format=3 uid="uid://diqfoemjhol6a"]

[ext_resource type="PackedScene" uid="uid://db06x23v5lbbp" path="res://scenes/gui/menus/parallaxBackground/parallax_background.tscn" id="1_4ke34"]
[ext_resource type="Script" path="res://scenes/gui/menus/mainMenu/main_menu.gd" id="1_ow5nf"]
[ext_resource type="ButtonGroup" uid="uid://cx8ag3o05utul" path="res://scenes/gui/menus/mainMenu/saves_button_group.tres" id="2_t1wtj"]

[sub_resource type="FontVariation" id="FontVariation_1e4sv"]
spacing_glyph = 11

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ow5nf")
button_group = ExtResource("2_t1wtj")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -292.0
offset_right = 207.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ChooseWorld" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Играть"

[node name="Options" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Настройки"

[node name="Exit" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Выход"

[node name="Label" type="Label" parent="Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -152.0
offset_right = 307.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_1e4sv")
theme_override_font_sizes/font_size = 90
text = "ГИГАХРУЩ"

[node name="Worlds" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -236.0
offset_right = 360.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Worlds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.486275)

[node name="Close" type="Button" parent="Worlds"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 31.0
grow_horizontal = 0
text = "x"

[node name="VBoxContainer" type="VBoxContainer" parent="Worlds"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.5
offset_top = -165.0
offset_right = 224.5
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="Worlds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Выберите сохранение"

[node name="VBoxContainer" type="VBoxContainer" parent="Worlds/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Save1" type="Button" parent="Worlds/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_t1wtj")
text = "Сохранение 1"

[node name="Save2" type="Button" parent="Worlds/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_t1wtj")
text = "Сохранение 2"

[node name="Save3" type="Button" parent="Worlds/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_t1wtj")
text = "Сохранение 3"

[node name="Save4" type="Button" parent="Worlds/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_t1wtj")
text = "Сохранение 4"

[node name="HBoxContainer" type="HBoxContainer" parent="Worlds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="Worlds/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Запустить"

[node name="Delete" type="Button" parent="Worlds/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Удалить"

[node name="ParallaxBackground" parent="." instance=ExtResource("1_4ke34")]

[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/ChooseWorld" to="." method="_on_choose_world_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Worlds/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Worlds/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
